[Phase-1]fix css

--- a/view/styles/main.css
+++ b/view/styles/main.css
@@ -352,7 +352,7 @@ footer #brand {
 }
 
 .restore-wrapper h6,
-.change-wripper h6,
+.change-wrapper h6,
 .error-wrapper h6 {
 	color: #111;
     font-size: 95%;
