--- a/users/view/styles/user.css
+++ b/users/view/styles/user.css
@@ -1,6 +1,6 @@
 body {
-	background: linear-gradient(180deg, #fcf1f1 0%, #f6fcf8 50%, #c4edc6 100%);
-	font-family: Arial, "Times New Roman", sans-serif;
+    background: linear-gradient(180deg, #fcf1f1 0%, #f6fcf8 50%, #c4edc6 100%);
+    font-family: Arial, "Times New Roman", sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -8,129 +8,164 @@ body {
 /*---------------------------------------------------------HEADER-----------------------------------------------------*/
 
 header {
-	background: linear-gradient(180deg, #14407c 0%, #3765a5 100%);
+    background: linear-gradient(180deg, #14407c 0%, #3765a5 100%);
     margin: 0;
-	min-width:980px;
-	width:100%;
+    width: 100%;
 }
 
 .clearfix::after {
-	content:'';
-	display: block;
-	clear: both;
+    content: '';
+    display: block;
+    clear: both;
 }
 
 .wrapped {
-	margin : 0 auto;
+    margin: 0 auto;
+    min-width: 980px;
+    height: 100px;
 }
 
-.wrapped  .logo {
-	float : left;
+.wrapped .logo {
+    float: left;
 }
 
-.wrapped  .logo h1 {
-	visibility: hidden;
+.wrapped .logo h1 {
+    visibility: hidden;
 }
 
-.wrapped  .logo a {
-	cursor: default;
+.wrapped .logo a {
+    cursor: default;
 }
 
 .logo {
-	background: url('../images/top-logo.png') no-repeat top 7px right;
-	background-size: 34%;
+    background: url('../images/top-logo.png') no-repeat top 10px right 30px;
+    background-size: 80%;
+    overflow: hidden;
+    height: 100px;
 }
 
 .nav-bar {
-	float: right;
-	margin: 0;
-	padding: 15px 0;
+    float: right;
+    margin: 0;
+    padding: 15px 0 !important;
 }
 
 .nav-bar nav > ul {
-	margin: 0;
-	padding: 0;
+    margin-top: 15px;
+    padding: 0;
 }
 
-.nav-bar nav > ul > li{
-	float: left;
-	margin: 5px 0 5px 30px;
-	padding: 0;
+.nav-bar nav > ul > li {
+    float: left;
+    list-style: outside none none;
+    margin: 5px;
+    padding: 0;
 }
 
 .nav-bar nav ul li button {
-	background: rgba(0, 0, 0, 0) linear-gradient(180deg, #2169a5 0%, #40c6ea 100%) repeat scroll 0 0;
-	border: 1px solid #a4a4a4;
-	border-radius: 3px;
-	color: #fff;
-	font-size: 1.2em;
-	padding: 3px 12px;
-	text-shadow: 1px 0 1px #000;
+    background: rgba(0, 0, 0, 0) linear-gradient(180deg, #2169a5 0%, #40c6ea 100%) repeat scroll 0 0;
+    border: 1px solid #a4a4a4;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 1.2em;
+    padding: 3px 5px;
+    text-shadow: 1px 0 1px #000;
+}
+
+.header-dropdown {
+    background: linear-gradient(180deg, #d3d3d3 0%, #f6fcf8 50%, #c4edc6 100%);
+}
+
+.header-dropdown li {
+    padding: 5px;
+}
+
+.header-dropdown li > a {
+    color: #2f2025 !important;
+}
+
+.header-dropdown li > a:hover {
+    color: deepskyblue !important;
+}
+
+.header-dropdown li i {
+    padding-right: 5px;
 }
 
 .nav-bar .search {
-	border: 1px solid #a4a4a4;
-	border-radius: 3px;
+    background-color: #fff;
+    border: 1px solid #a4a4a4;
+    border-radius: 3px;
 }
 
 .nav-bar .search input {
-	border: none;
-	margin-right: -5px;
-	outline: none;
-	padding: 5px 15px 5px;
+    border: 1px solid #fff;
+    margin-right: -5px;
+    line-height: 20px;
+    padding: 5px;
+    width: 137px;
 }
 
 .nav-bar .search button {
-	background: #fff;
-	border: none;
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	color: #ccc;
-	outline: none;
-	padding: 6px 20px 7px 0px;
+    background: #fff none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 0;
+    color: #ccc;
+    outline: medium none;
+    padding: 7px 10px 9px 5px;
 }
 
-.nav-bar nav > ul > li:last-child button{
-	background: none;
-	border: none;
-	margin: 10px -15px;
+.nav-bar nav > ul > li:last-child {
+    margin-right: 4px;
 }
+
+.nav-bar nav > ul > li:last-child button {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    margin: 10px 5px;
+}
+
+.dropdown-center {
+    left: -130px !important;
+    top: 35px !important;
+}
+
 /*-------------------------------------------------------------------------------------------------------------------*/
 article {
-	height: auto;
-	min-width:980px;
-	width:100%;
+    height: auto;
+    min-width: 980px;
+    width: 100%;
 }
+
 #content {
-	height: auto;
+    height: auto;
     margin: 0 auto;
     width: 980px;
 }
 
 #top {
     background-color: #fbfafc;
-	border: 1px solid #b4adad;
-	border-radius: 0 0 10px 10px;
-	height: 50px;
-	width: 100%
+    border: 1px solid #b4adad;
+    border-radius: 0 0 10px 10px;
+    height: 50px;
+    width: 100%
 }
 
-#top div:first-child{
-	float: left;
-	width: 30%;
-	height: 40px;
+#top div:first-child {
+    float: left;
+    width: 30%;
+    height: 40px;
 }
 
-#top div:first-child div{
+#top div:first-child div {
     float: none !important;
     height: 40px;
     margin: 5px auto;
     width: 70%;
 }
 
-#top div:first-child div p{
-	color: #3765a5;
+#top div:first-child div p {
+    color: #3765a5;
     font-weight: bold;
     line-height: 40px;
     margin: 0;
@@ -138,25 +173,25 @@ article {
     text-shadow: 1px 1px 1px #ddd;
 }
 
-#top div:last-child{
-	float: right;
-	width: 70%;
-	height: 40px;
+#top div:last-child {
+    float: right;
+    width: 70%;
+    height: 40px;
 }
 
-#top div:last-child table{
-	width: 100%;
+#top div:last-child table {
+    width: 100%;
 }
 
-#top div:last-child table td{
-	border: 1px solid #00f;
+#top div:last-child table td {
+    border: 1px solid #00f;
 }
 
-#top div:last-child table p{
-	color: #3765a5;
-	font-size: 90%;
-	text-align: center;
-	text-shadow: 1px 1px 1px #ddd;
+#top div:last-child table p {
+    color: #3765a5;
+    font-size: 90%;
+    text-align: center;
+    text-shadow: 1px 1px 1px #ddd;
 }
 
 #left_top {
@@ -166,51 +201,51 @@ article {
 }
 
 #frame {
-	background: linear-gradient(180deg, #1a72ea 0%, #c4edc6 100%);
-	border: 2px solid #14407c;
-	border-radius: 10px;
-	height: 200px;
-	margin: 20px auto;
-	padding: 10px;
-	width: 68%;
+    background: linear-gradient(180deg, #1a72ea 0%, #c4edc6 100%);
+    border: 2px solid #14407c;
+    border-radius: 10px;
+    height: 200px;
+    margin: 20px auto;
+    padding: 10px;
+    width: 68%;
 }
 
 #photo_emblem {
-	height: 0px;
+    height: 0px;
 }
 
-#photo_emblem img{
+#photo_emblem img {
     bottom: 25px;
-	clear: both;
-	cursor: pointer;
+    clear: both;
+    cursor: pointer;
     left: 5px;
-	position: relative;
-	transition:  width 1s;
-	width: 20px;
+    position: relative;
+    transition: width 1s;
+    width: 20px;
 }
 
 #photo_emblem img:hover {
-	width: 23px;
+    width: 23px;
 }
 
 #upload_form {
-	display: none;
-	height: 0px;
-	float: left;
-	left: 3px;
-	position: relative;
-	top: 125px;
+    display: none;
+    height: 0px;
+    float: left;
+    left: 3px;
+    position: relative;
+    top: 125px;
 }
 
-#button{
-	margin: 20px auto;
-	padding: 10px;
-	width: 68%;
+#button {
+    margin: 20px auto;
+    padding: 10px;
+    width: 68%;
 }
 
 #teach {
-	background: linear-gradient(180deg, #06fd0f 0%, #099f42 3%, #0abc4f 97%, #06fd0f 100%);
-	border: 1px solid #03340a;
+    background: linear-gradient(180deg, #06fd0f 0%, #099f42 3%, #0abc4f 97%, #06fd0f 100%);
+    border: 1px solid #03340a;
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
@@ -222,46 +257,46 @@ article {
 }
 
 #write {
-	background: linear-gradient(180deg, #06fd0f 0%, #099f42 3%, #0abc4f 97%, #06fd0f 100%);
-	border: 1px solid #03340a;
+    background: linear-gradient(180deg, #06fd0f 0%, #099f42 3%, #0abc4f 97%, #06fd0f 100%);
+    border: 1px solid #03340a;
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
     display: inline-block;
     font-size: 75%;
     font-weight: bold;
-	margin: 0 0 0 13px;
+    margin: 0 0 0 13px;
     padding: 5px 31px;
     text-shadow: 2px 2px 5px #111;
 }
 
 #honors {
     margin: 20px auto;
-	width: 90%;
+    width: 90%;
 }
 
 #honors table {
-	border-spacing: 0;
-	width: 100%;
+    border-spacing: 0;
+    width: 100%;
 }
 
 #honors table tbody {
-	background-color: #fbfafc;
-	border: 1px solid #9a9d9d;
-	display: block;
+    background-color: #fbfafc;
+    border: 1px solid #9a9d9d;
+    display: block;
 }
 
 #honors table thead td {
-	background: linear-gradient(180deg, #3765a5 0%, #4c72a7 3%, #6784ac 97%, #919dad 100%);
-    border-radius: 10px 10px 0 0 ;
+    background: linear-gradient(180deg, #3765a5 0%, #4c72a7 3%, #6784ac 97%, #919dad 100%);
+    border-radius: 10px 10px 0 0;
     color: gold;
-	text-align: center;
+    text-align: center;
     text-shadow: 1px 1px 1px #000;
 }
 
 #honors table tbody td {
-	height: 100px;
-	width: 30%;
+    height: 100px;
+    width: 30%;
 }
 
 #right_top {
@@ -271,13 +306,13 @@ article {
 }
 
 #friends {
-	height: 200px;
-	width: 100%;
+    height: 200px;
+    width: 100%;
 }
 
 #friends table {
-	border-spacing: 0;
-	width: 100%;
+    border-spacing: 0;
+    width: 100%;
 }
 
 #friends p {
@@ -295,7 +330,7 @@ article {
 }
 
 #friends table table {
-	border: 1px solid #14407c;
+    border: 1px solid #14407c;
     border-radius: 10px;
     border-spacing: 0;
     padding: 5px;
@@ -303,36 +338,36 @@ article {
 }
 
 #friends table table td {
-	width: 60px;
+    width: 60px;
 }
 
 #friends table table img {
-	display: inline-block;
+    display: inline-block;
     margin: 0 5px;
     width: 50px;
 }
 
 #friends table table p {
-	font-size: 60%;
+    font-size: 60%;
     text-align: center;
     text-shadow: 0 0 0 #fff;
 }
 
 #blog {
-	clear: both;
-	width: 100%;
+    clear: both;
+    width: 100%;
 }
 
 #blog div:first-child {
-	background: linear-gradient(180deg, #14407c 0%, #3765a5 100%);
-	border-radius: 5px 5px 0 0 ;
-	margin:0;
-	padding:0;
-	width: 95%;
+    background: linear-gradient(180deg, #14407c 0%, #3765a5 100%);
+    border-radius: 5px 5px 0 0;
+    margin: 0;
+    padding: 0;
+    width: 95%;
 }
 
 #blog div:first-child p {
-	color: #fff;
+    color: #fff;
     font-size: 90%;
     margin: 0 0 0 20px;
     padding: 5px 0;
@@ -341,13 +376,13 @@ article {
 }
 
 #blog div:last-child {
-	background-color: #ffd;
-	height: 40px;
-	margin:0;
-	width: 95%;
+    background-color: #ffd;
+    height: 40px;
+    margin: 0;
+    width: 95%;
 }
 
-#blog div:last-child  input {
-	margin: 12px;
-	width: 95%;
+#blog div:last-child input {
+    margin: 12px;
+    width: 95%;
 }
