[Phase-2]Some updates

--- a/users/view/styles/user.css
+++ b/users/view/styles/user.css
@@ -132,6 +132,10 @@ header {
 }
 
 /*-------------------------------------------------------------------------------------------------------------------*/
+.content .left {
+    border-right: 1px solid rgba(164, 164, 164, 0.6);
+}
+
 
 .username {
     background-color: rgba(29, 145, 166, 0.7);
