--- a/users/view/styles/user.css
+++ b/users/view/styles/user.css
@@ -204,7 +204,7 @@ header {
     /*visibility: visible;*/
 }
 
-.show-uploader .form-wrapper {
+.show-uploader .form-wrapper, .subject-progress {
     border-top: 20px solid navy;
     border-bottom: 1px solid navy;
     border-left: 1px solid navy;
@@ -221,7 +221,11 @@ header {
     margin: 5px 0;
 }
 
-.btn-create {
+.create-project {
+    margin: 30px 0;
+}
+
+.btn-create, .btn-use-klg {
     margin: 0 auto;
     display: block;
     border-radius: 4px;
@@ -229,4 +233,31 @@ header {
     font-size: 120%;
     width: 180px;
     height: 40px;
+}
+
+blockquote {
+    background-color: rgba(21, 179, 126, 0.32);
+    border: 1px solid #00B37C;
+    border-left: 5px solid rgba(60, 125, 218, 0.79) !important;
+    border-radius: 6px;
+    box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.4);
+    font-family: Georgia,serif;
+    font-size: 16px;
+    font-style: italic;
+    margin: 20px;
+}
+
+
+.subject-progress {
+    height: auto;
+    width: 100%;
+}
+
+.subject {
+    text-align: center;
+}
+
+.btn-use-klg {
+    margin: 0;
+    width: 100%
 }
