--- a/users/view/styles/user.css
+++ b/users/view/styles/user.css
@@ -226,12 +226,12 @@ header {
 }
 
 .btn-create, .btn-use-klg {
-    margin: 0 auto;
+    margin: 0;
     display: block;
     border-radius: 4px;
     text-shadow: 1px 1px 1px #000;
     font-size: 120%;
-    width: 180px;
+    width: 100%;
     height: 40px;
 }
 
@@ -255,9 +255,4 @@ blockquote {
 
 .subject {
     text-align: center;
-}
-
-.btn-use-klg {
-    margin: 0;
-    width: 100%
 }
