--- a/SmartPeopleUI/lib/app.less
+++ b/SmartPeopleUI/lib/app.less
@@ -1,2 +1,28 @@
 @import "welcome/welcome";
 @import "user-cr/user-cr";
+
+&html,
+&body {
+   background-color: #F0F1F2;
+   color: #000;
+   font-family: Arial, "Times New Roman", sans-serif;
+   font-size: 14px;
+   margin: 0;
+   padding: 0;
+
+   .clearfix::after {
+      content: '';
+      display: block;
+      clear: both;
+   }
+
+   &table,
+   &tr,
+   &td {
+      padding: 0;
+      margin: 0;
+      border-collapse: collapse;
+      border: 0 none;
+      background: none;
+   }
+}
