[Phase1] Adjusted material design in some cases

--- a/SmartPeopleUI/lib/welcome/header/header.less
+++ b/SmartPeopleUI/lib/welcome/header/header.less
@@ -1,3 +1,23 @@
+.logo {
+   background: url('../images/top-logo.png') no-repeat top 15px left 15px;
+   background-size: 60%;
+   height: 120px;
+   float: left;
+   width: 500px;
+
+   h1 {
+      font-size: 200%;
+      margin: 0;
+      padding: 30px;
+      text-shadow: 2px 1px 5px #000;
+      visibility: hidden;
+   }
+
+   a {
+      cursor: default;
+   }
+}
+
 .login-form {
 
    float: right;
@@ -20,17 +40,26 @@
       }
    }
 
-   input[type="submit"], .registration a {
-      background: rgba(0, 0, 0, 0) linear-gradient(180deg, #0aa546 0%, #0B5F2B 100%) repeat scroll 0 0;
-      border: 1px solid #033e03;
-      border-radius: 2px;
-      color: #fff;
-      cursor: pointer;
-      display: inline-block;
-      margin: -1px 5px 0px 0;
-      outline: 0 none;
-      padding: 3px 8px;
-      text-shadow: 1px 1px 1px #000;
+   md-checkbox {
+      margin: 0;
+
+      .md-checkbox-label {
+         border: none;
+      }
+
+      .md-checkbox-icon {
+         background-color: rgb(255, 255, 255);
+      }
+   }
+
+   md-checkbox[aria-checked="true"] .md-checkbox-icon {
+      background: rgb(76, 175, 80);
+   }
+
+   .sign-in-btn {
+      margin-top: -1px;
+      font-weight: bold;
+      text-shadow: 0 0 1px #394FD2
    }
 
    .remember-me {
