--- a/SmartPeopleUI/lib/welcome/welcome.less
+++ b/SmartPeopleUI/lib/welcome/welcome.less
@@ -5,11 +5,8 @@
 @import "footer/footer";
 
 header {
-   background: linear-gradient(180deg, #14407c 0%, #3765a5 100%);
+   background: #3f51b5;
    color: #fff;
-   margin: 0;
-   min-width: 980px;
-   width: 100%;
 
    a {
       color: #fff;
@@ -26,29 +23,8 @@ header {
 .wrapped {
    margin: 0 auto;
    width: 980px;
-
-   .logo {
-      float: left;
-      background-size: 60%;
-      width: 500px;
-
-      h1 {
-         font-size: 200%;
-         margin: 0;
-         padding: 30px;
-         text-shadow: 2px 1px 5px #000;
-         visibility: hidden;
-      }
-
-      a {
-         cursor: default;
-      }
-   }
 }
 
 footer {
    border-top: 1px solid #EADCDC;
-   clear: both;
-   min-width: 980px;
-   width: 100%;
 }
