--- a/SmartPeopleUI/lib/app.less
+++ b/SmartPeopleUI/lib/app.less
@@ -25,4 +25,14 @@
       border: 0 none;
       background: none;
    }
+
+   .custom-md-success {
+      background: rgb(76, 175, 80);
+      color: rgb(255, 255, 255);
+   }
+
+   .smart-next-btn {
+      line-height: 22px;
+      margin: 0;
+   }
 }
