--- a/SmartPeopleUI/lib/welcome/account-managment/sign-up/sign-up.less
+++ b/SmartPeopleUI/lib/welcome/account-managment/sign-up/sign-up.less
@@ -1,10 +1,8 @@
 .content {
-   margin: 0;
-   min-height: 540px;
-   min-width: 980px;
-   width: 100%;
+   padding: 50px 0px;
 
    .content-logo {
+      background: url('../images/logo.png') no-repeat top 50px left 5px;
       background-size: 350px;
       height: 340px;
       float: left;
@@ -24,11 +22,12 @@
             padding: 10px 0;
 
             input {
+               border: 2px inset rgba(16, 16, 224, 0.37);
                border-radius: 5px;
                font-size: 140%;
+               outline: none;
                padding: 10px 15px;
                width: 100%;
-               border: 2px inset rgba(16, 16, 224, 0.37);
             }
 
             .border {
@@ -57,7 +56,7 @@
             }
          }
 
-         .sex {
+         .gender {
             float: left;
             height: 27px;
             line-height: 27px;
@@ -81,24 +80,11 @@
          }
 
          .sign-up-btn {
-            background: linear-gradient(180deg, #06fd0f 0%, #099f42 3%, #0abc4f 97%, #06fd0f 100%);
-            border: 1px solid #03340a !important;
-            color: #fff;
-            cursor: pointer;
-            display: inline-block;
+
             font-size: 150% !important;
             font-weight: bold;
-            text-shadow: 2px 2px 5px #111;
-            width: 50% !important;
-         }
 
-         .warrning {
-            background-color: #fff;
-            border: 2px solid #ce0a0a !important;
-         }
-
-         .new_width {
-            width: 80% !important;
+            width: 50%;
          }
       }
    }
