[Phase-1] Removed extra code

--- a/SmartPeopleUI/lib/welcome/account-managment/restore-access/restore-access.less
+++ b/SmartPeopleUI/lib/welcome/account-managment/restore-access/restore-access.less
@@ -34,7 +34,7 @@
          }
 
          .restore-input-wrapper {
-            margin: 0 auto;
+            margin: 15px auto;
             width: 100%;
 
             .fixed-label {
