Fixed main, app and footer styles

--- a/SmartPeopleUI/lib/footer/footer.component.html
+++ b/SmartPeopleUI/lib/footer/footer.component.html
@@ -1,5 +1,3 @@
-<footer>
-   <div class="wrapped">
-      <div class="brand">SmartPeople &copy; 2016</div>
-   </div>
+<footer class="footer">
+  <div class="brand">SmartPeople &copy; 2016</div>
 </footer>
