--- a/SmartPeopleUI/lib/footer/footer.component.less
+++ b/SmartPeopleUI/lib/footer/footer.component.less
@@ -1,11 +1,15 @@
-.brand {
-   clear: both;
-   color: #555;
-   float: none;
-   font-family: Verdana;
-   font-weight: bold;
-   margin: 20px auto;
-   padding: 10px 0 0 0;
-   text-align: center;
-   width: 170px;
+.footer {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #fff;
+
+  .brand {
+    color: #555;
+    font-family: Verdana, serif;
+    font-weight: bold;
+    margin: 20px auto;
+  }
 }
