--- a/SmartPeopleUI/lib/app.component.html
+++ b/SmartPeopleUI/lib/app.component.html
@@ -1,3 +1,5 @@
-<sp-header></sp-header>
-<router-outlet></router-outlet>
-<sp-footer></sp-footer>
+<div class="app">
+    <sp-header class="header"></sp-header>
+    <router-outlet class="content"></router-outlet>
+    <sp-footer class="footer"></sp-footer>
+</div>
