Fixed header styles

--- a/SmartPeopleUI/lib/header/header.component.html
+++ b/SmartPeopleUI/lib/header/header.component.html
@@ -1,10 +1,8 @@
-<div class="wrapped">
+<header class="header">
 
-    <div class="logo">
-        <a [routerLink]="['SignUp']">
-            <h1>Smart People</h1>
-        </a>
-    </div>
+    <a class="root-link" href="/">
+        <img class="logo" src="../images/top-logo.png"/>
+    </a>
 
     <sp-login></sp-login>
-</div>
+</header>
