--- a/SmartPeopleUI/lib/header/login/login.component.less
+++ b/SmartPeopleUI/lib/header/login/login.component.less
@@ -1,4 +1,100 @@
-.custom-md-success {
-  background: rgb(76, 175, 80);
-  color: rgb(255, 255, 255);
+.login {
+  .form {
+    display: flex;
+    flex-direction: row;
+
+    a, label {
+      color: #fff;
+      text-shadow: 0 0 1px #000;
+      padding: 5px 0;
+    }
+
+    .header {
+      font-size: 0.75em;
+    }
+
+    .input-group {
+      margin-right: 10px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .email {
+
+      md-checkbox {
+        color: #fff;
+        margin: 0;
+        .md-checkbox-label {
+          border: none;
+        }
+
+        .md-checkbox-icon {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+    }
+
+    .sign-in-btn {
+      align-self: center;
+    }
+  }
 }
+
+//.custom-md-success {
+//  background: rgb(76, 175, 80);
+//  color: rgb(255, 255, 255);
+//}
+//
+//.login-form {
+//
+//  float: right;
+//  padding: 10px 0;
+//
+
+//
+//  .input-wrapper {
+//    float: left;
+//    margin-right: 10px;
+//
+//    tr:last-child td {
+//      height: 27px;
+//      font-size: 95%;
+//      line-height: 27px;
+//    }
+//  }
+//
+//  md-checkbox {
+//    margin: 0;
+//
+//    .md-checkbox-label {
+//      border: none;
+//    }
+//
+//    .md-checkbox-icon {
+//      background-color: rgb(255, 255, 255);
+//    }
+//  }
+//
+//  md-checkbox[aria-checked="true"] .md-checkbox-icon {
+//    background: rgb(76, 175, 80);
+//  }
+//
+//  .sign-in-btn {
+//    margin-top: -1px;
+//    font-weight: bold;
+//    text-shadow: 0 0 1px #394FD2
+//  }
+//
+//  .remember-me {
+//    height: 13px;
+//    margin: 0;
+//    padding: 0;
+//    position: relative;
+//    top: 2px;
+//    width: 13px;
+//  }
+//
+//  .red {
+//    color: #F76E6E !important;
+//  }
+//}
