Added info and restore components

--- a/SmartPeopleUI/lib/app.component.html
+++ b/SmartPeopleUI/lib/app.component.html
@@ -1,5 +1,7 @@
 <div class="app">
     <sp-header class="header"></sp-header>
-    <router-outlet class="content"></router-outlet>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
     <sp-footer class="footer"></sp-footer>
 </div>
