--- a/SmartPeopleUI/lib/shared/header/header.component.html
+++ b/SmartPeopleUI/lib/shared/header/header.component.html
@@ -1,6 +1,7 @@
 <header class="header">
 
-    <a class="root-link" href="/">
+    <!--<a class="root-link" [routerLink]="['Home']">-->
+    <a class="root-link">
         <img class="logo" src="../images/top-logo.png"/>
     </a>
 
