[UX-5] Updated header and login components styles, added favicon and resized logo img

--- a/SmartPeopleUI/lib/shared/header/header.component.less
+++ b/SmartPeopleUI/lib/shared/header/header.component.less
@@ -1,13 +1,6 @@
 .header {
   display: flex;
   justify-content: space-around;
-  background: linear-gradient(180deg, #14407c 0%, #3765a5 100%);
+  background-color: #3f51b5;
   padding: 10px 0;
-
-  .root-link{
-    .logo {
-      // TODO: Smaller logo. It has no sense to download large picture and reduce size
-      width: 300px;
-    }
-  }
 }
