--- a/SmartPeopleUI/lib/shared/header/login/login.component.less
+++ b/SmartPeopleUI/lib/shared/header/login/login.component.less
@@ -5,8 +5,9 @@
 
     a, label {
       color: #fff;
-      text-shadow: 0 0 1px #000;
       padding: 5px 0;
+      text-decoration: none;
+      text-shadow: 0 0 1px #000;
     }
 
     .header {
@@ -14,9 +15,9 @@
     }
 
     .input-group {
-      margin-right: 10px;
       display: flex;
       flex-direction: column;
+      margin-right: 10px;
     }
 
     .email {
@@ -24,6 +25,7 @@
       md-checkbox {
         color: #fff;
         margin: 0;
+
         .md-checkbox-label {
           border: none;
         }
@@ -32,69 +34,24 @@
           background-color: rgb(255, 255, 255);
         }
       }
+
+      md-checkbox[aria-checked="true"] {
+        .md-checkbox-icon {
+          background-color: rgb(76, 175, 80);
+        }
+      }
     }
 
     .sign-in-btn {
       align-self: center;
+      line-height: 22px;
+      margin: 0;
+      min-width: 64px;
+    }
+
+    .custom-md-success {
+      background: rgb(76, 175, 80);
+      color: rgb(255, 255, 255);
     }
   }
 }
-
-//.custom-md-success {
-//  background: rgb(76, 175, 80);
-//  color: rgb(255, 255, 255);
-//}
-//
-//.login-form {
-//
-//  float: right;
-//  padding: 10px 0;
-//
-
-//
-//  .input-wrapper {
-//    float: left;
-//    margin-right: 10px;
-//
-//    tr:last-child td {
-//      height: 27px;
-//      font-size: 95%;
-//      line-height: 27px;
-//    }
-//  }
-//
-//  md-checkbox {
-//    margin: 0;
-//
-//    .md-checkbox-label {
-//      border: none;
-//    }
-//
-//    .md-checkbox-icon {
-//      background-color: rgb(255, 255, 255);
-//    }
-//  }
-//
-//  md-checkbox[aria-checked="true"] .md-checkbox-icon {
-//    background: rgb(76, 175, 80);
-//  }
-//
-//  .sign-in-btn {
-//    margin-top: -1px;
-//    font-weight: bold;
-//    text-shadow: 0 0 1px #394FD2
-//  }
-//
-//  .remember-me {
-//    height: 13px;
-//    margin: 0;
-//    padding: 0;
-//    position: relative;
-//    top: 2px;
-//    width: 13px;
-//  }
-//
-//  .red {
-//    color: #F76E6E !important;
-//  }
-//}
