[UX-6] Small layout cleanup in restore access component

--- a/SmartPeopleUI/lib/account/restore-access/restore-access.component.html
+++ b/SmartPeopleUI/lib/account/restore-access/restore-access.component.html
@@ -5,19 +5,16 @@
 
         <div class="input-group">
 
-            <div class="label">
+            <div class="input-control">
                 <label for="restore-access">Email:</label>
-            </div>
-
-            <div class="inputs">
                 <input type="text"
                        id="restore-access"
                        class="email"
                        placeholder="Insert email here"/>
-
-                <!--<a mdRaisedButton class="md-primary smart-next-btn" [routerLink]="['ChangePassword']">Next</a>-->
-                <a mdRaisedButton class="md-primary next-btn">Next</a>
             </div>
+
+            <!--<a mdRaisedButton class="md-primary smart-next-btn" [routerLink]="['ChangePassword']">Next</a>-->
+            <a mdRaisedButton class="md-primary next-btn">Next</a>
         </div>
     </form>
 </sp-info>
