[SP-2] Added and adjusted Change Password Component

--- a/SmartPeopleUI/lib/account/restore-access/restore-access.component.html
+++ b/SmartPeopleUI/lib/account/restore-access/restore-access.component.html
@@ -16,7 +16,7 @@
                        placeholder="Insert email here"/>
 
                 <!--<a mdRaisedButton class="md-primary smart-next-btn" [routerLink]="['ChangePassword']">Next</a>-->
-                <a mdRaisedButton class="md-primary next-btn">Next</a>
+                <a mdRaisedButton class="md-primary next-btn" [routerLink]="['ChangePassword']">Next</a>
             </div>
         </div>
     </form>
